--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/pedrobemfica/clinica-olimpo/issues"
   },
-  "homepage": "https://github.com/pedrobemfica/clinica-olimpo/tree/35e3bf18318bd6ed3ac8b42c793968f8663b8cb1#readme"
+  "homepage": "https://github.com/pedrobemfica/clinica-olimpo/tree/35e3bf18318bd6ed3ac8b42c793968f8663b8cb1#readme",
+  "dependencies": {
+    "ionic": "^5.4.16"
+  }
 }
