--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "client",
   "version": "1.0.0",
   "description": "Frontend for clinica olimpo",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
